tests/ui/simd/intrinsic/generic-elements.stderr
error[E0511]: invalid monomorphization of `simd_insert` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-elements.rs:51:9
   |
LL |         simd_insert(0, 0, 0);
   |         ^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_insert` intrinsic: expected inserted type `i32` (element of input `i32x4`), found `f64`
  --> $DIR/generic-elements.rs:53:9
   |
LL |         simd_insert(x, 0, 1.0);
   |         ^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_extract` intrinsic: expected return type `i32` (element of input `i32x4`), found `f32`
  --> $DIR/generic-elements.rs:55:9
   |
LL |         simd_extract::<_, f32>(x, 0);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-elements.rs:59:9
   |
LL |         simd_shuffle::<i32, _, i32>(0, 0, IDX2);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-elements.rs:62:9
   |
LL |         simd_shuffle::<i32, _, i32>(0, 0, IDX4);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-elements.rs:65:9
   |
LL |         simd_shuffle::<i32, _, i32>(0, 0, IDX8);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle` intrinsic: expected return element type `i32` (element of input `i32x4`), found `f32x2` with element type `f32`
  --> $DIR/generic-elements.rs:68:9
   |
LL |         simd_shuffle::<_, _, f32x2>(x, x, IDX2);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle` intrinsic: expected return element type `i32` (element of input `i32x4`), found `f32x4` with element type `f32`
  --> $DIR/generic-elements.rs:70:9
   |
LL |         simd_shuffle::<_, _, f32x4>(x, x, IDX4);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle` intrinsic: expected return element type `i32` (element of input `i32x4`), found `f32x8` with element type `f32`
  --> $DIR/generic-elements.rs:72:9
   |
LL |         simd_shuffle::<_, _, f32x8>(x, x, IDX8);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle` intrinsic: expected return type of length 2, found `i32x8` with length 8
  --> $DIR/generic-elements.rs:75:9
   |
LL |         simd_shuffle::<_, _, i32x8>(x, x, IDX2);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle` intrinsic: expected return type of length 4, found `i32x8` with length 8
  --> $DIR/generic-elements.rs:77:9
   |
LL |         simd_shuffle::<_, _, i32x8>(x, x, IDX4);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle` intrinsic: expected return type of length 8, found `i32x2` with length 2
  --> $DIR/generic-elements.rs:79:9
   |
LL |         simd_shuffle::<_, _, i32x2>(x, x, IDX8);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle_const_generic` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-elements.rs:83:9
   |
LL |         simd_shuffle_const_generic::<i32, i32, I2>(0, 0);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle_const_generic` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-elements.rs:86:9
   |
LL |         simd_shuffle_const_generic::<i32, i32, I4>(0, 0);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle_const_generic` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-elements.rs:89:9
   |
LL |         simd_shuffle_const_generic::<i32, i32, I8>(0, 0);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle_const_generic` intrinsic: expected return element type `i32` (element of input `i32x4`), found `f32x2` with element type `f32`
  --> $DIR/generic-elements.rs:92:9
   |
LL |         simd_shuffle_const_generic::<_, f32x2, I2>(x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle_const_generic` intrinsic: expected return element type `i32` (element of input `i32x4`), found `f32x4` with element type `f32`
  --> $DIR/generic-elements.rs:94:9
   |
LL |         simd_shuffle_const_generic::<_, f32x4, I4>(x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle_const_generic` intrinsic: expected return element type `i32` (element of input `i32x4`), found `f32x8` with element type `f32`
  --> $DIR/generic-elements.rs:96:9
   |
LL |         simd_shuffle_const_generic::<_, f32x8, I8>(x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle_const_generic` intrinsic: expected return type of length 2, found `i32x8` with length 8
  --> $DIR/generic-elements.rs:99:9
   |
LL |         simd_shuffle_const_generic::<_, i32x8, I2>(x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle_const_generic` intrinsic: expected return type of length 4, found `i32x8` with length 8
  --> $DIR/generic-elements.rs:101:9
   |
LL |         simd_shuffle_const_generic::<_, i32x8, I4>(x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shuffle_const_generic` intrinsic: expected return type of length 8, found `i32x2` with length 2
  --> $DIR/generic-elements.rs:103:9
   |
LL |         simd_shuffle_const_generic::<_, i32x2, I8>(x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 21 previous errors

For more information about this error, try `rustc --explain E0511`.
